--- a/DUOLGraphicsLibrary/DUOLGraphicsLibrary.vcxproj
+++ b/DUOLGraphicsLibrary/DUOLGraphicsLibrary.vcxproj
@@ -71,7 +71,10 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>$(SolutionDir)build\$(Platform)\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)Build\$(Platform)\$(Configuration)\</OutDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutDir>$(SolutionDir)Build\$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -143,6 +146,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLGraphicsLibrary\Core\Helper.h" />
+    <ClInclude Include="include\DUOLGraphicsLibrary\CommandBufferFlags.h" />
+    <ClInclude Include="include\DUOLGraphicsLibrary\Core\TypeCast.h" />
     <ClInclude Include="include\DUOLGraphicsLibrary\Renderer\CommandBuffer.h" />
     <ClInclude Include="include\DUOLGraphicsLibrary\Renderer\BufferArray.h" />
     <ClInclude Include="include\DUOLGraphicsLibrary\Renderer\Buffer.h" />
