--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@
 # Compiled Dynamic libraries
 *.so
 *.dylib
-*.dll
 
 # Fortran module files
 *.mod
@@ -24,9 +23,20 @@
 *.lai
 *.la
 *.a
-*.lib
 
 # Executables
 *.exe
 *.out
 *.app
+
+.vs
+*/x64
+*/Debug
+*/Release
+*.tlog
+*.log
+*.ipdb
+*.idb
+*.pdb
+
+Build
